Update package & docs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
     <button fancyButton="#ed0" (click)="zoompanel.zoomOut()"> ZOOM - [OUT] </button>
     <button fancyButton="#9d5" (click)="zoompanel.setZoom(1)"> ZOOM - [1x] </button>
     <button fancyButton="#4d8" (click)="zoompanel.setZoom(20)"> ZOOM - [20x] </button>
-    <p class="text">Ngx-Zoomable Demo 2025</p>
+    <p class="text">Ngx-Zoomable Demo ( <a href="https://github.com/json-k/ngx-zoomable">Git</a> )</p>
+    
   </nav>
   <ngx-zoomable #zoompanel [clipped]="true" [padding]=20>
     <div ngxZoomable 
