--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,10 @@
               line-height: 34px;
               text-align: center;
               font-size: 12px;
+
+              a {
+                color: #fff;
+              }
           }
       }
 
