Updated demo with video

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,6 +94,14 @@
       [y]=1000
       [w]=2000
       [h]=500>
+    <video width="480" height="270" ngxZoomable autoplay loop 
+      style="border: 1px solid #c66;"
+      [x]=1540
+      [y]=-20
+      [w]=480
+      [h]=270>
+      <source src="assets/video-852x480.mp4">
+    </video>
     <img ngxZoomable
       src="assets/crosshair-16x16.svg"
       style="z-index: 98;"
