--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,7 +94,7 @@
       [y]=1000
       [w]=2000
       [h]=500>
-    <video width="480" height="270" ngxZoomable autoplay loop 
+    <video width="480" height="270" ngxZoomable autoplay loop muted
       style="border: 1px solid #c66;"
       [x]=1540
       [y]=-20
